--- a/.github/workflows/nodwrkz.yml
+++ b/.github/workflows/nodwrkz.yml
@@ -14,9 +14,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'   # use LTS for stability
+          node-version: '20'
 
-  
   trivy_fs_scan:
     runs-on: ubuntu-latest
     needs: compile
@@ -26,33 +25,4 @@ jobs:
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
-        with:
-          scan-type: fs
-          scan-ref: .
-          format: table
-          ignore-unfixed: true
-          vuln-type: os,library
-          severity: CRITICAL,HIGH
-          exit-code: 1
-
-  sonar-check:
-    runs-on: ubuntu-latest
-    needs: compile
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        with:
-          projectBaseDir: bankapp
-          args: >
-            -Dsonar.projectKey=bofc
-            -Dsonar.projectName=bofc
-            -Dsonar.sources=bankapp
-            -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-
- 
+        with
