--- a/.github/workflows/nodwrkz.yml
+++ b/.github/workflows/nodwrkz.yml
@@ -16,13 +16,22 @@ jobs:
         with:
           node-version: '20'
 
-  trivy_fs_scan:
-    runs-on: ubuntu-latest
-    needs: compile
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  sonar-check:
+  runs-on: ubuntu-latest
+  needs: compile
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.28.0
-        with
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      with:
+        projectBaseDir: .
+        args: >
+          -Dsonar.projectKey=bofc
+          -Dsonar.projectName=bofc
+          -Dsonar.sources=bankapp
+          -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
