--- a/.github/workflows/nodwrkz.yml
+++ b/.github/workflows/nodwrkz.yml
@@ -1,35 +1,26 @@
-name: myCICD
+name: Build
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+
 
 jobs:
-  compile:
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v2
         with:
-          node-version: '20'
-
-  sonar-check:
-    runs-on: ubuntu-latest
-    needs: compile
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build Java project
-        run: mvn -f bankapp/pom.xml clean package -DskipTests=true
-
-      - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        with:
-          projectBaseDir: ./bankapp
-          args: >
-            -Dsonar.projectKey=bofc
-            -Dsonar.projectName=bofc
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      # If you wish to fail your job when the Quality Gate is red, uncomment the
+      # following lines. This would typically be used to fail a deployment.
+      # - uses: sonarsource/sonarqube-quality-gate-action@master
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
