--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,17 +5,16 @@ on:
     branches:
       - main
 
-
 jobs:
   build:
     name: Build
-    runs-on: nodwrkz #ubuntu-latest
+    runs-on: nodwrkz # or ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-    
