--- a/.github/workflows/nodwrkz.yml
+++ b/.github/workflows/nodwrkz.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Build and Analyze
-    runs-on: nodwrkz # or ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
