--- a/.github/workflows/nodwrkz.yml
+++ b/.github/workflows/nodwrkz.yml
@@ -1,40 +1,21 @@
-name: Build
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
   build:
-    name: Build and Analyze
-    runs-on: ubuntu-latest
+    runs-on: nodwrkz
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      # Set up JDK
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
           java-version: '17'
+          distribution: 'temurin'
 
-      # Build with Maven (compiles Java code)
       - name: Build with Maven
-        run: mvn -f bankapp/pom.xml clean package -DskipTests=true
+        run: mvn clean install -DskipTests
 
-      # Run SonarQube analysis
-      - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        with:
-          projectBaseDir: ./bankapp
-          args: >
-            -Dsonar.projectKey=bofc
-            -Dsonar.projectName=bofc
-            -Dsonar.sources=src/main/java
-            -Dsonar.java.binaries=target/classes
+      - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
