--- a/.github/workflows/nodwrkz.yml
+++ b/.github/workflows/nodwrkz.yml
@@ -15,7 +15,12 @@ jobs:
       - name: Build with Maven
         run: mvn clean install -DskipTests
 
-      - uses: sonarsource/sonarqube-scan-action@master
+            - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        with:
+          args: >
+            -Dsonar.projectKey=your-project-key
+            -Dsonar.java.binaries=target/classes
+
