--- a/.github/workflows/nodwrkz.yml
+++ b/.github/workflows/nodwrkz.yml
@@ -1,26 +1,83 @@
+name: Main Workflow
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
+
 jobs:
-  build:
-    runs-on: ubuntu-latest  #nodwrkz
+  sonarqube:
+    runs-on: nodwrkz # ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Build with Maven
-        run: mvn clean install -DskipTests
-
-            - uses: sonarsource/sonarqube-scan-action@master
+      - name: SonarQube Scan
+        uses: opsverseio/sonarqube-quality-gate-action@0.1.0
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        with:
-          args: >
-            -Dsonar.projectKey=your-project-key
-            -Dsonar.java.binaries=target/classes
+          SET_SONAR_PROJECT_STATUS: true 
 
+      - name: SonarQube Quality Gate check
+        id: sonarqube-quality-gate-check
+        uses: opsverseio/sonarqube-quality-gate-action@0.1.0
+        timeout-minutes: 5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          SET_SONAR_PROJECT_STATUS: true 
+
+  build:
+    name: Build and Scan
+    runs-on: nodwrkz # ubuntu-24.04
+    needs: sonarqube
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # OWASP Dependency-Check
+      - name: Run OWASP Dependency-Check
+        uses: dependency-check/Dependency-Check_Action@main
+        with:
+          project: 'my-app'
+          path: '.'
+          format: 'ALL'
+          out: 'dependency-check-report'
+      - name: Upload OWASP report artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dependency-check-report
+          path: dependency-check-report
+
+      - name: Build an image from Dockerfile
+        run: docker build -t docker.io/my-organization/my-app:${{ github.sha }} .
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+
+      - name: Check Dependency-Track Results
+        uses: altinukshini/dependency-track-checker@v1
+
+      - name: Upload to Nexus
+        uses: cdqag/action-upload-to-nexus@v1
+        with:
+          instance-url: ${{ vars.NEXUS_URL }}
+          username: ${{ vars.NEXUS_USER }}
+          password: ${{ secrets.NEXUS_PASS }}
+          repository: my-repository
+          default-destination: some/path/or/empty/string
+          files: |
+            file1.txt
+            file2.txt => some/other/path/with-other-name.txt
+            sub/* => oh/look/it/works/*
