--- a/.github/workflows/nodwrkz.yml
+++ b/.github/workflows/nodwrkz.yml
@@ -1,12 +1,10 @@
-name: Main Workflow
+name: bank of Canada app 
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    types: [opened, synchronize, reopened]
-
+ 
 jobs:
   sonarqube:
     runs-on: nodwrkz # ubuntu-latest
