--- a/.github/workflows/nodwrkz.yml
+++ b/.github/workflows/nodwrkz.yml
@@ -7,7 +7,7 @@ on:
  
 jobs:
   sonarqube:
-    runs-on: nodwrkz # ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
@@ -31,7 +31,7 @@ jobs:
 
   build:
     name: Build and Scan
-    runs-on: nodwrkz # ubuntu-24.04
+    runs-on: ubuntu-24.04
     needs: sonarqube
     steps:
       - name: Checkout code
