--- a/.github/workflows/nodwrkz.yml
+++ b/.github/workflows/nodwrkz.yml
@@ -1,10 +1,10 @@
-name: bank of Canada app 
+name: bank of Canada app
 
 on:
   push:
     branches:
       - main
- 
+
 jobs:
   sonarqube:
     runs-on: ubuntu-latest
@@ -13,7 +13,6 @@ jobs:
         with:
           fetch-depth: 0
 
-       # Install SonarQube scanner
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
@@ -49,6 +48,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Build JAR with Maven
+        run: mvn clean package -DskipTests
+
       # OWASP Dependency-Check
       - name: Run OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@main
@@ -57,13 +65,14 @@ jobs:
           path: '.'
           format: 'ALL'
           out: 'dependency-check-report'
+
       - name: Upload OWASP report artifact
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
           path: dependency-check-report
 
-      - name: Build an image from Dockerfile
+      - name: Build Docker image
         run: docker build -t iscanprint/bofc:v001 .
 
       - name: Run Trivy vulnerability scanner
@@ -75,11 +84,11 @@ jobs:
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
+
       - name: Upload to Nexus
         uses: cdqag/action-upload-to-nexus@v1
         with:
           instance-url: ${{ vars.NEXUS_URL }}
           username: ${{ vars.NEXUS_USER }}
           password: ${{ secrets.NEXUS_PASS }}
-          repository: bofc-app  #my-repository
-          
+          repository: bofc-app
